--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -306,7 +306,7 @@ jobs:
           echo ${{steps.version-change.outputs.CHANGED}} > changed.txt
           npx lerna ls -all --json > versions.json
           find ./packages/vscode-extension -type f -name '*.vsix' -exec mv {} . \;
-          find ./packages/server/lib -type f -name '*.exe' -exec mv {} server.exe \;
+          [ -d ./packages/server/lib ] && find ./packages/server/lib -type f -name '*.exe' -exec mv {} server.exe \;
 
       - name: upload release info to artifact
         uses: actions/upload-artifact@v3
