--- a/packages/eslint-plugin-teamsfx/package.json
+++ b/packages/eslint-plugin-teamsfx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/eslint-plugin-teamsfx",
-  "version": "0.0.4-rc.0",
+  "version": "0.0.4",
   "description": "eslint for teamsfx",
   "keywords": [
     "eslint",
