--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -56,6 +56,7 @@
     "test:specParser": "npx mocha \"tests/common/spec-parser/**/specParser.test.ts\"",
     "test:specFilter": "npx mocha \"tests/common/spec-parser/**/specFilter.test.ts\"",
     "test:error": "nyc mocha \"tests/error/*.test.ts\"",
+    "test:cutils": "nyc mocha \"tests/component/utils.test.ts\"",
     "clean": "rm -rf build",
     "build": "rimraf build && npx tsc -p ./",
     "lint:fix": "eslint --fix \"src/**/*.ts\" \"tests/**/*.ts\"",
